name:               thebook
version:            0.1.0
synopsis:           Exchange simulator in Haskell.
description:        This package implements an LSE Millenium clone in Haskell.
category:           Finance
homepage:           https://github.com/jkozlowski/thebook-haskell
bug-reports:        https://github.com/jkozlowski/thebook-haskell/issues
license-file:       LICENSE
license:            MIT

author:             Jakub Kozlowski
copyright:          2014 Jakub Kozlowski <mail@jakub-kozlowski.com>
maintainer:         mail@jakub-kozlowski.com

build-type:         Simple
cabal-version:      >=1.9.2
extra-source-files: LICENCE
                    README.md

source-repository head
  location:
      git://github.com/jkozlowski/thebook-haskell.git
  type:
      git

flag documentation
  default:
      False

library
  exposed-modules:     Data.ITCH.Types
                     , Data.ITCH.ITCH51
                     , Data.TheBook.MarketData
                     , Data.TheBook.OUCH
                     , Data.TheBook.Order
                     , Data.TheBook.Types
                     , Data.TheBook.Book
  default-language:    Haskell2010
  build-depends:       base >= 4 && < 5
                     , mtl
                     , bytestring >= 0.10
                     , text
                     , time
                     , containers
                     , binary >= 0.6.3
                     , lens
                     , QuickCheck == 2.6.*
                     , Decimal
                     , old-locale
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-incomplete-patterns

executable thebook
  main-is:             Data/TheBook/Main.hs
  build-depends:       base >= 4 && < 5
                     , mtl
                     , stm
                     , random
                     , bytestring
                     , text
                     , time
                     , containers
                     , hslogger
                     , thebook
                     , QuickCheck == 2.6.*
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-incomplete-patterns -rtsopts -threaded

executable generate-itch
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5
                     , xml-conduit
                     , filepath
                     , text
                     , bytestring
                     , haskell-src-exts
                     , containers
  default-language:    Haskell2010
  hs-source-dirs:      data
  ghc-options:         -Wall -fwarn-incomplete-patterns -rtsopts -threaded

test-suite thebook-tests
  main-is:            Data/TheBook/Test.hs
  type:               exitcode-stdio-1.0
  build-depends:      base
                    , bytestring
                    , containers
                    , text
                    , time
                    , binary
                    , tasty == 0.8
                    , tasty-quickcheck == 0.8
                    , QuickCheck == 2.6.*
                    , Cabal >= 1.9.2
                    , Decimal
                    , old-locale
  default-language:   Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs:     src, tests
  other-modules:      Data.TheBook.BookTest
                    , Data.ITCH.TypesTest
                    , Data.ITCH.ITCH51Test


