name:               thebook
version:            0.1.0
synopsis:           Exchange simulator in Haskell.
description:        This package implements an LSE Millenium clone in Haskell.
category:           Finance
homepage:           https://github.com/jkozlowski/thebook-haskell
bug-reports:        https://github.com/jkozlowski/thebook-haskell/issues
license-file:       LICENSE
license:            MIT

author:             Jakub Kozlowski
copyright:          2014 Jakub Kozlowski <mail@jakub-kozlowski.com>
maintainer:         mail@jakub-kozlowski.com

build-type:         Custom
cabal-version:      >= 1.9.2
extra-source-files: LICENCE
                    README.md

source-repository head
  location:
      git://github.com/jkozlowski/thebook-haskell.git
  type:
      git

flag documentation
  default:
      False

library
  exposed-modules:    Data.ITCH.Types
                    , Data.ITCH.ITCH51
                    , Data.TheBook.Types
                    , Data.TheBook.Book
                    , Data.TheBook.Rule
                    , Data.TheBook.Monad
  default-language:   Haskell2010
  build-depends:      base >= 4 && < 5
                    , mtl
                    , bytestring >= 0.10
                    , text
                    , time
                    , containers
                    , binary >= 0.6.3
                    , lens
                    , QuickCheck == 2.6.*
                    , Decimal
                    , old-locale
                    , fixhs >= 0.1.4 
                    , data-ordlist >= 0.4.6
                    , monad-logger >= 0.3.6
                      -- Codegen deps
                    , directory
                    , base >= 4 && < 5
                    , xml-conduit
                    , filepath
                    , text
                    , bytestring
                    , haskell-src-exts
                    , containers
                    , filepath
                    , system-filepath
  hs-source-dirs:     src
                    , generated
  ghc-options:       -Wall 
                     -fwarn-incomplete-patterns

executable thebook
  main-is:            Main.hs
  build-depends:      base >= 4 && < 5
                    , mtl
                    , stm
                    , lens
                    , random
                    , bytestring
                    , text
                    , time
                    , containers
                    , hslogger
                    , Decimal
                    , monad-logger >= 0.3.6
                    , data-ordlist >= 0.4.6
                    , thebook
                    , QuickCheck == 2.6.*
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:       -Wall 
                     -O2 
                     -fwarn-incomplete-patterns
                     -rtsopts 
                     -threaded

executable thebook-demo-client
  main-is:            Client.hs
  build-depends:      base >= 4 && < 5
                    , mtl
                    , transformers
                    , stm
                    , binary
                    , random
                    , network
                    , bytestring
                    , text
                    , time
                    , lens
                    , monad-logger >= 0.3.6
                    , containers
                    , hslogger
                    , hslogger-template
                    , conduit
                    , conduit-extra >= 1.1.0
                    , resourcet
                    , thebook
                    , QuickCheck == 2.6.*
  hs-source-dirs:     demo
  ghc-options:       -Wall -O2 -fwarn-incomplete-patterns -rtsopts -threaded

executable thebook-demo-server
  main-is:            Server.hs
  build-depends:      base >= 4 && < 5
                    , mtl
                    , transformers
                    , stm
                    , random
                    , binary
                    , bytestring
                    , text
                    , network
                    , time
                    , lens
                    , monad-logger >= 0.3.6
                    , containers
                    , hslogger
                    , hslogger-template
                    , conduit
                    , conduit-extra >= 1.1.0
                    , thebook
                    , QuickCheck == 2.6.*
  hs-source-dirs:      demo
  ghc-options:       -Wall 
                     -O2 
                     -fwarn-incomplete-patterns 
                     -rtsopts 
                     -threaded

test-suite thebook-tests
  main-is:            Test.hs
  type:               exitcode-stdio-1.0
  build-depends:      base
                    , bytestring
                    , containers
                    , text
                    , time
                    , binary
                    , mtl
                    , lens
                    , tasty == 0.8
                    , monad-logger >= 0.3.6
                    , tasty-quickcheck == 0.8
                    , QuickCheck == 2.6.*
                    , Cabal >= 1.9.2
                    , Decimal
                    , old-locale
                    , fixhs >= 0.1.4 
  Ghc-Options:       -Wall 
                     -O0 
                     -fhpc 
                     -hpcdir 
                      dist/hpc/mix/thebook-tests
  hs-source-dirs:     src 
                    , generated
                    , tests

benchmark thebook-bench
  type:               exitcode-stdio-1.0
  hs-source-dirs:     src
                    , generated
                    , bench
  main-is:            Benchmark.hs
  build-depends:      base
                    , mtl
                    , criterion
                    , random
                      -- Codegen deps
                    , directory
                    , base >= 4 && < 5
                    , xml-conduit
                    , filepath
                    , text
                    , monad-logger >= 0.3.6
                    , bytestring
                    , haskell-src-exts
                    , containers
                    , filepath
                    , system-filepath
  ghc-options:       -Wall
                     -O2
